# nweng

./: README.md  pyproject.toml
docs/: index.md
examples/: generate_config.py
examples/manifests/: junos-node-bgp.yml  junos-node-igp.yml  junos-node-infra.yml  junos-node-mpls.yml  junos-node-policy.yml  junos-service-port.yml  manifest-service-ip.json
examples/templates/junos/bgp/: bgp_protocols_bgp.conf  bgp_routing-options.conf
examples/templates/junos/igp/: igp_protocols_isis.conf  igp_protocols_isis_interface.conf
examples/templates/junos/infra/: infra_chassis.conf  infra_firewall_filter.conf  infra_forwarding-options_sampling.conf  infra_forwarding-options_sampling_flow-server.conf  infra_groups_re.conf  infra_policy-options_prefix-list.conf  infra_snmp.conf  infra_system.conf  infra_system_syslog_host.conf
examples/templates/junos/interface/: interfaces_ae_agg_options.conf  interfaces_ae_interface.conf  interfaces_interface.conf  interfaces_interface_bb.conf  interfaces_interface_lo.conf  interfaces_interface_unit.conf  interfaces_interface_unit_family.conf
examples/templates/junos/mpls/: mpls_groups_lsp.conf  mpls_protocols_interface.conf  mpls_protocols_mpls.conf  mpls_protocols_mpls_ldp.conf  mpls_protocols_mpls_lsp.conf  mpls_protocols_mpls_rsvp.conf  mpls_protocols_rsvp_interface.conf
examples/templates/junos/policy/: policy_policy-options.min.conf  policy_policy-options_common.conf  policy_policy-options_customers.conf  policy_policy-options_peer.conf  (+3 more)
nweng/nwdev/: __init__.py
nweng/nwdev/api/: __init__.py  api.py  template.py  types.py
(+1 files in other folders)
